crates/parser/src/snapshots/parser__tests__parse_object_field_accessor.snap
---
source: crates/parser/src/lib.rs
expression: "&parse.debug_tree()"
info:
  code: x.y
---
Root@0..3
  ObjectFieldAccessExpression@0..3
    VariableReference@0..1
      Identifier@0..1 "x"
    Period@1..2 "."
    Identifier@2..3 "y"
