crates/parser/src/snapshots/parser__tests__parse_simple_infix_expression.snap
---
source: crates/parser/src/lib.rs
expression: "&parse.debug_tree()"
---
Root@0..3
  InfixExpression@0..3
    Number@0..1
      Number@0..1 "1"
    Plus@1..2 "+"
    Number@2..3
      Number@2..3 "2"
